@@ -7,7 +7,7 @@ module Semantic
         cosine(vector1, vector2)
       end
       
-      #Related documents j and q are in the concept space by comparing the vectors :
+      #Related documents j and q are in the concept space by comparing the vectors:
       #cosine  = ( V1 * V2 ) / ||V1|| x ||V2||
       def cosine(vector1, vector2)
         unless vector2.nil? or vector1.nil?
