@@ -6,19 +6,19 @@ module Semantic
       @options = options
     end
 
-    def apply_transforms(matrix)
+    def apply_transforms(vector_space_model)
       @transforms.each do |transform|
         begin
           transform_class = Semantic::Transform.const_get(transform)
           Semantic.logger.info("Applying #{transform} transform")
-          matrix = transform_class.send(:transform, matrix) if transform_class.respond_to?(:transform)
-          Semantic.logger.info(matrix)
+          vector_space_model.matrix = transform_class.send(:transform, vector_space_model.matrix) if transform_class.respond_to?(:transform)
+          Semantic.logger.info(vector_space_model)
         rescue Exception => e
           Semantic.logger.error("Error: Cannot perform transform: #{transform}")
           Semantic.logger.error(e)
         end
       end
-      matrix
+      vector_space_model
     end
 
   end
